@@ -1,5 +1,11 @@
 2009-07-23  Thomas Moulard  <thomas.moulard@gmail.com>
 
+	Clean finite difference gradient code.
+	* src/finite-difference-gradient.cc: Fix typo and use
+	norm_inf from uBlas instead of computing it manually.
+
+2009-07-23  Thomas Moulard  <thomas.moulard@gmail.com>
+
 	Enhance finite difference computation.
 	* include/roboptim/core/finite-difference-gradient.hh:
 	Add BadGradient exception class and add checkGradientAndThrow
